--- a/main.tex
+++ b/main.tex
@@ -112,9 +112,9 @@
 		{}
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
-%	ADDITIONAL INFORMATION
-%----------------------------------------------------------------------------------------
+%-----------
+% Additional
+%-----------
 
 \begin{minipage}[t]{0.3\textwidth}
 	\vspace{-\baselineskip}
@@ -139,8 +139,6 @@
 
 	\lorem
 \end{minipage}
-
-%----------------------------------------------------------------------------------------
 
 \end{document}
 
