--- a/main.tex
+++ b/main.tex
@@ -25,14 +25,19 @@
 	\vspace{-\baselineskip}
 
 	\icon{MapMarker}{12}{Tyne and Wear}\\
-	\icon{Phone}{12}{000 000 00 000}\\
-	\icon{At}{12}{\href{mailto:cv[at]james-ball.co.uk}{cv[at]james-ball.co.uk}}\\	
+
+	\icon{Phone}{12}{OMMITED}\\
+
+	\icon{At}{12}{\href{mailto:cv@james-ball.co.uk}{cv@james-ball.co.uk}}\\	
 \end{minipage}
 \begin{minipage}[t]{0.275\textwidth}
 	\vspace{-\baselineskip}
 
 	\icon{Globe}{12}{\href{https://james-ball.co.uk}{james-ball.co.uk}}\\
+
 	\icon{Github}{12}{\href{https://github.com/84115}{github.com/84115}}\\
+
+    \icon{Linkedin}{12}{\href{https://www.linkedin.com/in/84115}{James Ball}}\\    
 \end{minipage}
 
 \vspace{0.5cm}
@@ -46,7 +51,8 @@
 \begin{minipage}[t]{0.4\textwidth}
 	\vspace{-\baselineskip}
 	
-	\lorem. \lorem. \lorem
+	Personable and dependable developer with 6+ years expertise in fast-paced e-commerce\\
+	environments. I am a driven self-starter and fast learner who can learn new skills for a role. Experienced in server administration. Seeking new development opportunities to advance my career.
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.5\textwidth}
@@ -54,8 +60,8 @@
 	\begin{barchart}{5.5}
 		\baritem{JavaScript}{90}
 		\baritem{PHP}{100}
-		\baritem{MySQL}{80}
-		\baritem{Frontend}{70}
+		\baritem{Frontend}{80}
+		\baritem{MySQL}{70}
 		\baritem{Git}{60}
 	\end{barchart}
 \end{minipage}
@@ -68,29 +74,58 @@
 
 \begin{entrylist}
 	\entry
-		{0000 - 0000\\\footnotesize{full time}}
-		{Developer}
-		{Company}
-		{\lorem\\
-		\texttt{ITEM 1}\slashsep
-		\texttt{ITEM 2}\slashsep
-		\texttt{ITEM 3}}
+		{04/2019 -- NOW\\\footnotesize{full time}}
+		{Enterprise Developer}
+		{Visualsoft}
+		{At \textit{Visualsoft} I primarily develop third party integrations for their e-commerce platform including: CallFire, Bluecore, Nosto, Deepl, EurekaSage200, MailChimp, GFS (Rest). While also writing code for bespoke client feature request and additional platform features: Product Specifications, Data Integrity.\\
+		\texttt{PHP}\slashsep
+		\texttt{Javascript}\slashsep
+		\texttt{MySQL}\slashsep
+		\texttt{Kohana}\slashsep
+		\texttt{API (JSON, SOAP)}}
 	\entry
-		{0000 - 0000\\\footnotesize{full time}}
-		{Developer}
-		{Company}
-		{\lorem\\
-		\texttt{ITEM 1}\slashsep
-		\texttt{ITEM 2}\slashsep
-		\texttt{ITEM 3}}
+		{2016 -- 2019\\\footnotesize{full time}}
+		{Full Stack Developer}
+		{Roxoa Group}
+		{While working at \textit{Roxoa} I designed and developed a new store rubyandoscar.com. I additionally redesigned qpjewellers.com and goldboutique.com. As my career progressed I directed my attention onto the development for API and third party integrations including: Pay4Later, Assay Office, Amazon, Tesco and Trustpilot.\\
+		\texttt{PHP}\slashsep
+		\texttt{Magento}\slashsep
+		\texttt{Javascript}\slashsep
+		\texttt{CSS}\slashsep
+		\texttt{MySQL}\slashsep
+		\texttt{Sysadmin}\slashsep
+		\texttt{Wordpress}}
 	\entry
-		{0000 - 0000\\\footnotesize{full time}}
-		{Developer}
-		{Company}
-		{\lorem\\
-		\texttt{ITEM 1}\slashsep
-		\texttt{ITEM 2}\slashsep
-		\texttt{ITEM 3}}
+		{2016\\\footnotesize{full time}}
+		{Web/IT Developer}
+		{IAM Sold}
+		{At \textit{Iam Sold} I worked on developing the new dashboard admin interfaces, improving and \\optimising the existing reports system whilst making changes to their existing websites.\\
+		\texttt{PHP}\slashsep
+		\texttt{Buan}\slashsep
+		\texttt{MySQL}\slashsep
+		\texttt{CSS}}
+	\entry
+		{2014 -- 2016\\\footnotesize{full time}}
+		{Web Developer}
+		{Roxoa Group}
+		{While working at \textit{Roxoa} I developed the new website for Roxoa Group (roxoa.com) and launching two new stores goldboutique.com and sunglassesden.com. I additionally maintained three Magento E-Commerce stores: (qpjewellers.com, watchtag.com, giftedjewelry.com) as part of the development team.\\
+		\texttt{PHP}\slashsep
+		\texttt{Magento}\slashsep
+		\texttt{Javascript}\slashsep
+		\texttt{CSS}\slashsep
+		\texttt{MySQL}\slashsep
+		\texttt{Sysadmin}\slashsep
+		\texttt{Wordpress}}
+	\entry
+		{2012 -- 2014\\\footnotesize{full time}}
+		{VLE/Web Developer}
+		{Ashington Learning Partnership}
+		{I was responsible for developing applications integrated with the FROG VLE including: LEAP rewards system, Parents Evening Booking and School Library.\\
+        I also developed the public facing websites for \textit{Ashington High}, \textit{Bothal Primary School} and \textit{Central Primary} and maintaining the intranet and VLE mini-websites.\\
+		\texttt{JavaScript}\slashsep
+		\texttt{PHP}\slashsep
+		\texttt{MySQL}\slashsep
+		\texttt{Frog}}
 \end{entrylist}
 
 %----------
@@ -116,29 +151,37 @@
 % Additional
 %-----------
 
-\begin{minipage}[t]{0.3\textwidth}
-	\vspace{-\baselineskip}
-
-	\cvsect{References}
-	
-	\lorem
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.3\textwidth}
-	\vspace{-\baselineskip}
-	
-	\cvsect{Hobbies}
-	
-	\lorem
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.3\textwidth}
+\begin{minipage}[t]{0.4\textwidth}
 	\vspace{-\baselineskip}
 	
 	\cvsect{Other Experience}
 
-	\lorem
+    \textbf{Microsoft Imagine Cup 2012}\\
+	Myself and a small group of friends worked together on prototype of an app which promoted environmental sustainability over the course of a weekend then presented it to professional developers.
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.2\textwidth}
+	\vspace{-\baselineskip}
+	
+	\cvsect{Hobbies}
+	
+	In my free time I enjoy;\\
+	\textbf{-} Guitar\\
+	\textbf{-} Jogging\\
+	\textbf{-} Gaming\\
+	\textbf{-} Development
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.2\textwidth}
+	\vspace{-\baselineskip}
+
+	\cvsect{References}
+	
+	Available on request
 \end{minipage}
 
-\end{document}
+%---------
+% Document
+%---------
 
+\end{document}
