--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -26,7 +26,7 @@
 
 	\icon{MapMarker}{12}{Tyne and Wear}\\
 
-	\icon{Phone}{12}{OMMITED}\\
+	\icon{Phone}{12}{075 113 47 615}\\
 
 	\icon{At}{12}{\href{mailto:cv@james-ball.co.uk}{cv@james-ball.co.uk}}\\	
 \end{minipage}
