--- a/main.tex
+++ b/main.tex
@@ -19,16 +19,18 @@
 	
 	\vspace{6pt}
 	
-	{\huge Web Developer}
+	{\huge Software Developer}
 \end{minipage}
 \begin{minipage}[t]{0.275\textwidth}
 	\vspace{-\baselineskip}
 
-	\icon{MapMarker}{12}{Tyne and Wear}\\
+	\icon{MapMarker}{12}{Newcastle Upon Tyne}\\
 
-	\icon{Phone}{12}{OMMITED}\\
+	%\icon{Phone}{12}{075 113 47 615}\\
 
-	\icon{At}{12}{\href{mailto:cv@james-ball.co.uk}{cv@james-ball.co.uk}}\\	
+	\icon{Linkedin}{12}{\href{https://www.linkedin.com/in/84115}{James Ball}}\\
+
+	%\icon{At}{12}{\href{mailto:cv@james-ball.co.uk}{cv@james-ball.co.uk}}\\	
 \end{minipage}
 \begin{minipage}[t]{0.275\textwidth}
 	\vspace{-\baselineskip}
@@ -36,8 +38,6 @@
 	\icon{Globe}{12}{\href{https://james-ball.co.uk}{james-ball.co.uk}}\\
 
 	\icon{Github}{12}{\href{https://github.com/84115}{github.com/84115}}\\
-
-    \icon{Linkedin}{12}{\href{https://www.linkedin.com/in/84115}{James Ball}}\\    
 \end{minipage}
 
 \vspace{0.5cm}
@@ -61,7 +61,7 @@
 		\baritem{JavaScript}{90}
 		\baritem{PHP}{100}
 		\baritem{Frontend}{80}
-		\baritem{MySQL}{70}
+		\baritem{SQL}{70}
 		\baritem{Git}{60}
 	\end{barchart}
 \end{minipage}
@@ -74,41 +74,61 @@
 
 \begin{entrylist}
 	\entry
-		{04/2019 -- NOW\\\footnotesize{full time}}
+		{May -- Present\\\footnotesize{self employed}}
+		{Software Development Contractor}
+		{JB Software Development}
+		{Clients include; Soft Focus, WhatsThat\\
+		\texttt{PHP}\slashsep
+		\texttt{Laravel}\slashsep
+		\texttt{SQL}\slashsep
+		\texttt{Vue}\slashsep
+		\texttt{React}\slashsep
+		\texttt{MongoDB}\slashsep
+		\texttt{Redis}}
+	\entry
+	    {Feb 2022 -- April\\\footnotesize{contract}}
+		{Senior Software Engineer}
+		{Salesfire}
+		{While working at Salesfire I primarily worked on integrating dynamic notifications using Pusher to their existing dashboard. As well creating a health checker application that was used to monitor the existing Platform/API statuses.\\
+		\texttt{PHP}\slashsep
+		\texttt{Laravel}\slashsep
+		\texttt{SQL}\slashsep
+		\texttt{Vue}}
+	\entry
+		{2021 -- Jan 2022\\\footnotesize{ceased trading}}
+		{Senior Software Developer}
+		{Northern Stable}
+		{I was responsible for planning and developing the referral platform \textit{Referrey}. As well as working on their existing project \textit{Sequencer}; an email video delivery SaaS.\\
+		\texttt{PHP}\slashsep
+		\texttt{Laravel}\slashsep
+		\texttt{SQL}\slashsep
+		\texttt{Vue}}
+	\entry
+		{2020 -- 2021\\\footnotesize{full time}}
+		{Software Developer}
+		{TripIQ / Co-Wheels Car Club}
+		{While working at \textit{TripIQ} I rebuilt the partially inaccessible server architecture and documented all of the changes. I Also redesigned and released the new branding for the website and web app. As well as developing the GDPR removal and export process.\\
+		\texttt{PHP}\slashsep
+		\texttt{Laravel}\slashsep
+		\texttt{PostgreSQL}\slashsep
+		\texttt{Angular}\slashsep
+		\texttt{MongoDB}\slashsep
+		\texttt{Redis}}
+	\entry
+		{2019 -- 2020\\\footnotesize{full time}}
 		{Enterprise Developer}
 		{Visualsoft}
-		{At \textit{Visualsoft} I primarily develop third party integrations for their e-commerce platform including: CallFire, Bluecore, Nosto, Deepl, EurekaSage200, MailChimp, GFS (Rest). While also writing code for bespoke client feature request and additional platform features: Product Specifications, Data Integrity.\\
+		{At \textit{Visualsoft} I primarily develop 3rd party integrations for their e-commerce platform including: CallFire, Bluecore, Nosto, Deepl, EurekaSage200, MailChimp, GFS. While also writing code for bespoke client feature request and additional platform features: Product Specifications, Data Integrity.\\
 		\texttt{PHP}\slashsep
 		\texttt{Javascript}\slashsep
 		\texttt{MySQL}\slashsep
 		\texttt{Kohana}\slashsep
 		\texttt{API (JSON, SOAP)}}
 	\entry
-		{2016 -- 2019\\\footnotesize{full time}}
+		{2014 -- 2019\\\footnotesize{full time}}
 		{Full Stack Developer}
 		{Roxoa Group}
-		{While working at \textit{Roxoa} I designed and developed a new store rubyandoscar.com. I additionally redesigned qpjewellers.com and goldboutique.com. As my career progressed I directed my attention onto the development for API and third party integrations including: Pay4Later, Assay Office, Amazon, Tesco and Trustpilot.\\
-		\texttt{PHP}\slashsep
-		\texttt{Magento}\slashsep
-		\texttt{Javascript}\slashsep
-		\texttt{CSS}\slashsep
-		\texttt{MySQL}\slashsep
-		\texttt{Sysadmin}\slashsep
-		\texttt{Wordpress}}
-	\entry
-		{2016\\\footnotesize{full time}}
-		{Web/IT Developer}
-		{IAM Sold}
-		{At \textit{Iam Sold} I worked on developing the new dashboard admin interfaces, improving and \\optimising the existing reports system whilst making changes to their existing websites.\\
-		\texttt{PHP}\slashsep
-		\texttt{Buan}\slashsep
-		\texttt{MySQL}\slashsep
-		\texttt{CSS}}
-	\entry
-		{2014 -- 2016\\\footnotesize{full time}}
-		{Web Developer}
-		{Roxoa Group}
-		{While working at \textit{Roxoa} I developed the new website for Roxoa Group (roxoa.com) and launching two new stores goldboutique.com and sunglassesden.com. I additionally maintained three Magento E-Commerce stores: (qpjewellers.com, watchtag.com, giftedjewelry.com) as part of the development team.\\
+		{While working at \textit{Roxoa} I designed and developed a new store rubyandoscar.com. Additionally I redesigned qpjewellers.com and goldboutique.com. As my career progressed I directed my attention onto the development for API and 3rd party integrations including: Pay4Later, Assay Office, Amazon, Tesco and Trustpilot.\\
 		\texttt{PHP}\slashsep
 		\texttt{Magento}\slashsep
 		\texttt{Javascript}\slashsep
@@ -118,10 +138,10 @@
 		\texttt{Wordpress}}
 	\entry
 		{2012 -- 2014\\\footnotesize{full time}}
-		{VLE/Web Developer}
+		{VLE \& Web Developer}
 		{Ashington Learning Partnership}
-		{I was responsible for developing applications integrated with the FROG VLE including: LEAP rewards system, Parents Evening Booking and School Library.\\
-        I also developed the public facing websites for \textit{Ashington High}, \textit{Bothal Primary School} and \textit{Central Primary} and maintaining the intranet and VLE mini-websites.\\
+		{I was responsible for developing applications inter grated with the \textit{FROG VLE} including: LEAP rewards system, Parents Evening Booking and the School Library.\\
+		I also developed the public facing websites for \textit{Ashington High School}, \textit{Bothal Primary} and \textit{Central Primary} and maintained their intranet and VLE mini-websites.\\
 		\texttt{JavaScript}\slashsep
 		\texttt{PHP}\slashsep
 		\texttt{MySQL}\slashsep
@@ -151,34 +171,34 @@
 % Additional
 %-----------
 
-\begin{minipage}[t]{0.4\textwidth}
-	\vspace{-\baselineskip}
+% \begin{minipage}[t]{0.4\textwidth}
+% 	\vspace{-\baselineskip}
 	
-	\cvsect{Other Experience}
+% 	\cvsect{Other Experience}
 
-    \textbf{Microsoft Imagine Cup 2012}\\
-	Myself and a small group of friends worked together on prototype of an app which promoted environmental sustainability over the course of a weekend then presented it to professional developers.
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.2\textwidth}
-	\vspace{-\baselineskip}
+%     \textbf{Microsoft Imagine Cup 2012}\\
+% 	Myself and a small group of friends worked together on prototype of an app which promoted environmental sustainability over the course of a weekend then presented it to professional developers.
+% \end{minipage}
+% \hfill
+% \begin{minipage}[t]{0.2\textwidth}
+% 	\vspace{-\baselineskip}
 	
-	\cvsect{Hobbies}
+% 	\cvsect{Hobbies}
 	
-	In my free time I enjoy;\\
-	\textbf{-} Guitar\\
-	\textbf{-} Jogging\\
-	\textbf{-} Gaming\\
-	\textbf{-} Development
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.2\textwidth}
-	\vspace{-\baselineskip}
+% 	In my free time I enjoy;\\
+% 	\textbf{-} Guitar\\
+% 	\textbf{-} Skateboarding\\
+% 	\textbf{-} Development\\
+% 	\textbf{-} Gaming
+% \end{minipage}
+% \hfill
+% \begin{minipage}[t]{0.2\textwidth}
+% 	\vspace{-\baselineskip}
 
-	\cvsect{References}
+% 	\cvsect{References}
 	
-	Available on request
-\end{minipage}
+% 	Available on request
+% \end{minipage}
 
 %---------
 % Document
